Work / CSVProcessor / Parallelise